# rasterizer

./: .gitignore  CMakeLists.txt  README.md  rasterizer.cpp  rasterizer.h  rasterizer.sln  rasterizer.vcxproj  rasterizer.vcxproj.filters  ssphere.mtl  ssphere4.mtl
core/: camera.h  culling.cpp  culling.h  material.h  mesh.h  primitive.h  rasterizer.cpp  rasterizer.h  render_thread.h  transformation.h  triangle.h  win_main.cpp  zbuffer.h
display/: WindowDisplayer.cpp  WindowDisplayer.h  image_png.cpp  painter.cpp  painter.h  wdisplayer.cpp  wdisplayer.h
log/: log.cpp  log.h
math/: monolith_math.h
parser/: file_parser.h
